--- a/carbon-market/map.html
+++ b/carbon-market/map.html
@@ -44,8 +44,8 @@
   <script src="https://d3js.org/queue.v1.min.js"></script>
   <script src="https://d3js.org/topojson.v1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
-  <script src="d3-tip.js"></script>
-  <script type="text/javascript" src="map.js"></script>
+  <script src="script/d3-tip.js"></script>
+  <script type="text/javascript" src="script/map.js"></script>
 </body>
 
 </html>
