--- a/carbon-market/assets/map/map.html
+++ b/carbon-market/assets/map/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <head>
- <link rel="stylesheet" href="styles/map_style.css">
+ <link rel="stylesheet" href="map_style.css">
 </head>
 
 <body>
@@ -40,12 +40,12 @@
 
 
 
-<script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://d3js.org/queue.v1.min.js"></script>
   <script src="https://d3js.org/topojson.v1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
-  <script src="script/d3-tip.js"></script>
-  <script type="text/javascript" src="script/map.js"></script>
+  <script src="d3-tip.js"></script>
+  <script type="text/javascript" src="map.js"></script>
 </body>
 
 </html>
