--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 <body>
     
-    <div id="navbar">
-        <a href="#carbon_market">Conclusion</a>
-        <a href="#landgrab_analysis">Landgrab</a>
-        <a href="#emission_analysis">Emissions</a>
-        <a href="#deforest_analysis">Deforestation</a>
-        <a href="#introduction">Introduction</a> 
-    </div>
+    <!--<div id="navbar">-->
+    <!--    <a href="#carbon_market">Conclusion</a>-->
+    <!--    <a href="#landgrab_analysis">Landgrab</a>-->
+    <!--    <a href="#emission_analysis">Emissions</a>-->
+    <!--    <a href="#deforest_analysis">Deforestation</a>-->
+    <!--    <a href="#introduction">Introduction</a> -->
+    <!--</div>-->
 
     <!-- Introduction -->
     <!--<header id="headerStyle">-->
