--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <div class="sub-title">
                     <h4>EMISSION FROM DEFORESTATION WITH DIFFERENT DEFINITIONS</h4>
                 </div>
-            <div class="full_content">
+            <div class="quater_viz">
                  <div class="chart-wrapper" id="emission-line"></div>
             </div>
     
