--- a/assets/map/map.html
+++ b/assets/map/map.html
@@ -7,7 +7,7 @@
 <body>
   
   
-  <div id="map"></div>
+  <div id="map" style="text-align:center";></div>
 <div style="display:flex;">
   <div style="display:flex;flex-direction: column; flex:5">
     <div id="main" style=" display:flex; width: 100%;flex-wrap: wrap;"></div>
