--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </p>
                 </div>
                 <div>
-                    <h4 id = "strong" style="padding-top:6%">THE POLICIES BASICALLY AIMS TO</h4>
+                    <h4 id = "strong" style="padding-top:6%">THE PROGRAM BASICALLY AIMS TO</h4>
                 </div>
                 <div>
                     <p id="tick_box"><img src = assets/tick.svg style="vertical-align:middle">   Reduce Deforestation</p>
@@ -269,7 +269,7 @@
                 <!--    </p>-->
                 <!--</div>-->
                 <div>
-                    <h4>THE POLICIES <span class = "cut_off"> BASICALLY AIMS TO </span> ACTUALLY </h4>
+                    <h4>THE PROGRAM <span class = "cut_off"> BASICALLY AIMS TO </span> ACTUALLY </h4>
                 </div>
                 <div >
                     <p id="tick_box"><img src = assets/cross.svg style="vertical-align:middle">   Reduce Deforestation</p>
@@ -389,7 +389,7 @@
                     <!--</p>-->
                 <!--</div>-->
                 <div>
-                    <h4>THE POLICIES <span class = "cut_off"> BASICALLY AIMS TO </span> ACTUALLY </h4>
+                    <h4>THE PROGRAM <span class = "cut_off"> BASICALLY AIMS TO </span> ACTUALLY </h4>
                 </div>
                 <div >
                     <p id="tick_box"><img src = assets/cross.svg style="vertical-align:middle">   Reduce Deforestation</p>
@@ -543,7 +543,7 @@
                         <!--</p>-->
                     <!--</div>-->
                     <div>
-                        <h4 style="padding-top:10%">THE POLICIES <span class = "cut_off"> BASICALLY AIMS TO </span> ACTUALLY </h4>
+                        <h4 style="padding-top:10%">THE PROGRAM <span class = "cut_off"> BASICALLY AIMS TO </span> ACTUALLY </h4>
                     </div>
                     <div >
                         <p id="tick_box"><img src = assets/cross.svg style="vertical-align:middle">   Reduce Deforestation</p>
